--- a/css/map/screen.css
+++ b/css/map/screen.css
@@ -1,6 +1,7 @@
 #map {
     width: 100%; 
-    height: 100%; 
+    /* height: 100%; */
+    height: 600px;
 }
 
 body {
@@ -8,9 +9,11 @@ body {
     margin: 0;
 }
 
+/*
 html, body, #map {
     height: 100%;
 }
+*/
 
 #filter-container {
     position: absolute;
